dex/dex-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
  - hosts:
    - dex.apps.argoproj.io
    secretName: dex-secret
  rules:
  - host: dex.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dex
          servicePort: 5556
